<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customer_cart_recyclerView_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/customer_cart_itemName_textView"
             android:layout_width="140dp"
             android:layout_height="34dp"
             android:layout_marginStart="11dp"
             android:layout_marginTop="20dp"
             android:gravity="center|start"
             android:text="@string/name"
             android:textSize="18sp"
             android:layout_marginLeft="11dp" />

         <TextView
             android:id="@+id/customer_cart_price_textView"
             android:layout_width="112dp"
             android:layout_height="35dp"
             android:layout_marginTop="20dp"
             android:text="@string/price"
             android:textSize="18sp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" />

         <Button
             android:id="@+id/customer_cart_remove_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="27dp"
             android:layout_marginTop="41dp"
             android:layout_marginEnd="19dp"
             android:text="@string/remove"
             android:layout_marginLeft="27dp"
             android:layout_marginRight="19dp"
             />
     </LinearLayout>



    <TextView
        android:id="@+id/customer_cart_size_textView"
        android:layout_width="121dp"
        android:layout_height="33dp"
        android:layout_marginStart="15dp"

        android:layout_marginEnd="120dp"
        android:gravity="center|start"
        android:text="@string/size"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="120dp"
        />

    </LinearLayout>
</androidx.cardview.widget.CardView>