<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerCartActivity2">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="406dp"
        android:layout_height="540dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/customer_cart_proceed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.875"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/customer_cart_totalDistance_textView"
        android:layout_width="367dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center|start"
        android:text="@string/delivery_charges"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/customer_cart_totalPrice_textView"
        android:layout_width="367dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center|start"
        android:text="@string/cart_total"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_cart_totalDistance_textView"
        android:layout_marginLeft="8dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="194dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_cart_totalPrice_textView">

        <RadioButton
            android:id="@+id/customer_cart_regularPrice_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/regular_1_week"
            android:onClick="getFinalPrice"/>

        <RadioButton
            android:id="@+id/customer_cart_occasional_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/occasional"
            android:layout_marginBottom="10dp"
            android:onClick="getFinalPrice"/>
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>