<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customer_main_recyclerView_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/customer_item_name_textView"
             android:layout_width="139dp"
             android:layout_height="31dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="23dp"
             android:gravity="center|start"
             android:text="@string/name"
             android:textSize="20sp"
             android:layout_marginLeft="10dp" />

         <TextView
             android:id="@+id/customer_price_textView"
             android:layout_width="97dp"
             android:layout_height="31dp"
             android:layout_marginStart="22dp"
             android:layout_marginTop="23dp"
             android:gravity="center|start"
             android:text="@string/price"
             android:textSize="20sp"
             android:layout_marginLeft="22dp"
             />
     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/customer_size_spinner"
            android:layout_width="171dp"
            android:layout_height="34dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp" />

        <Button
            android:id="@+id/customer_addToCart_btn"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="12dp"
            android:gravity="center|start"
            android:text="@string/add_to_cart"
            android:textSize="15sp"
            />

    </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>